# reactive-resume-auto-composer

./: README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  resume-cv-create.py
.github/workflows/: ci.yml
data/samples/: academic_profile.md  job_posting.txt  org_page.md  resume_sample.txt
docs/: PROGRAMMER_GUIDE.md  USER_GUIDE.md  legal_notice.txt
logs/: log_20250909_213926.json  log_20250909_214404.json
output/: audit_20250909_174404.json  cover-letter_20250909_174404.json  resume_20250909_174404.json
src/: pipeline.py
src/adapters/: embeddings.py  llm.py
src/audit/: approvals.py  loggers.py
src/compose/: cover_letter.py  resume_builder.py
src/extraction/: classifier.py  extractor.py  schemas.py
src/ingestion/: file_loader.py  parsers.py  web_fetcher.py
src/merge/: deduplicate.py
src/normalization/: normalize.py
src/scoring/: relevance.py
src/utils/: config_loader.py  ids.py  io.py  text.py
templates/cover_letter/: default.j2
tests/unit/: test_classifier.py  test_config_loader.py  test_cover_letter.py  test_deduplicate.py  test_embeddings.py  test_extractor.py  test_file_loader.py  test_io_utils.py  test_llm.py  test_loggers.py  test_normalize.py  test_parsers.py  test_pipeline.py  test_relevance.py  test_resume_builder.py  test_schemas.py  test_web_fetcher.py
